doc/pjdfstest/tests/errors/eloop/sidebar-items.js
window.SIDEBAR_ITEMS = {"fn":["create_loop_symlinks"],"macro":["eloop_comp_test_case","eloop_either_test_case","eloop_final_comp_test_case"]};